# ImageEffects

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
ImageEffects/: EffectsCreator.py  __init__.py
ImageEffects/ImageEffects/: EffectsCreator.py  __init__.py  constants.py  utils.py
ImageEffects/ImageEffects/effects/: _caption1.py  _caption2.py  _cropcircle.py  _deepfry.py  _emojioverlay.py  _invert.py  _mirror.py  _pixelate.py  _resize.py  _saturate.py  _triggered.py
ImageEffects/resources/: README.md
src/ImageEffects/: EffectsCreator.py  constants.py  utils.py
src/ImageEffects/effects/: _ascify.py  _blur.py  _caption1.py  _caption2.py  _crop.py  _cropcircle.py  _deepfry.py  _emojioverlay.py  _flip.py  _pixelate.py  _resize.py  _rotate.py  _saturate.py
tests/: test_caption_formatter.py
