[metadata]
name = ImageEffects
description = A library to add effects to your images.
author = prashantrahul141
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    ImageEffects
install_requires =
    Pillow>=9.3.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
project_name = py.typed

