[metadata]
name = ImageEffects
description = A library to add effects to your images.
version=0.0.1
author = prashantrahul141
license = MIT
license_file = LICENSE
url=https://github.com/prashantrahul141/ImageEffects
keywords=python, image, manipulation, pillow, PIL
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages =
    ImageEffects
install_requires =
    Pillow>=9.3.0
    art>=5.8
    numpy>=1.24.0
    
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
project_name = py.typed

